--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.6",
+        "spatie/laravel-activitylog": "^4.10",
         "xendit/xendit-php": "^6.0"
     },
     "require-dev": {
