--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
         "@popperjs/core": "^2.11.6",
         "axios": "^1.1.2",
         "bootstrap": "^5.2.3",
-        "laravel-vite-plugin": "^0.7.2",
+        "laravel-vite-plugin": "^0.1.0",
         "sass": "^1.56.1",
-        "vite": "^4.0.0"
+        "vite": "^0.10.3"
+    },
+    "dependencies": {
+        "@fullcalendar/core": "^6.1.15",
+        "@fullcalendar/daygrid": "^6.1.15",
+        "@fullcalendar/interaction": "^6.1.15",
+        "fullcalendar": "^6.1.15"
     }
 }
